vcs/specs/parser/fail/types/existential_empty.vr
// @test: parse-fail
// @level: L0
// @tags: parser, types, existential, empty, error
// @description: Test detection of existential type without bounds
// @expected-error: E050

// Existential type must have bounds after colon
fn test() -> some T: {}
